--- a/src/style.css
+++ b/src/style.css
@@ -178,14 +178,14 @@ input:focus{
 /* Media queries */
 @media screen and (min-width: 768px) {
     .container{
-        width:min(80%,800px);
+        width:min(90%,820px);
         font-size:larger;
         flex-direction: row;
         position:absolute;
         top:50%;
         left:50%;
         transform:translate(-50%,-50%);
-        border-radius:var(--br-btn);
+        border-radius:var(--br-all);
     }
     .input-container{
        width: 50%;
